--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@ body {
 
 .container {
   max-width: 1140px;
+  width: 100%;
+  margin: 0 auto;
 }
 
 /* ========= HEADER ============= */
@@ -19,9 +21,42 @@ header {
   background: #222222;
 }
 
-.header__content {
+.head {
   display: flex;
   justify-content: space-between;
+  padding-top: 18px;
+  align-items: center;
+}
+
+.head__logo {
+  width: 111px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.head__navigation {
+  width: 168px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.menu_btn {
+  display: flex;
+  width: 32px;
+  height: 23px;
+  border: none;
+  background-color: transparent;
+  margin-top: 30px;
+}
+
+.menu_btn-item {
+  display: block;
+  margin: auto;
+  width: 100%;
+  height: 3px;
+  background: #e8e8e8;
+  position: relative;
 }
 
 /* ========= MAIN ============= */
