--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,6 @@
   margin: 0;
 }
 
-/* img {
-  display: block;
-} */
 body {
   font-family: Lato;
   font-style: normal;
@@ -73,6 +70,34 @@ header {
   height: 23px;
   border: none;
   background-color: transparent;
+  cursor: pointer;
+}
+
+.menu_btn:hover .menu-hover {
+  -webkit-animation-duration: 0.5s;
+          animation-duration: 0.5s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  -webkit-animation-name: menu;
+          animation-name: menu;
+}
+
+@-webkit-keyframes menu {
+  from {
+    right: -236px;
+  }
+  to {
+    right: 0px;
+  }
+}
+
+@keyframes menu {
+  from {
+    right: -236px;
+  }
+  to {
+    right: 0px;
+  }
 }
 
 .menu_btn-item {
@@ -119,6 +144,7 @@ header {
   background-image: url(../img/men_brand.png);
   background-repeat: no-repeat;
   background-position: center left 170px;
+  position: relative;
 }
 
 .brand__title {
@@ -156,6 +182,108 @@ header {
 
 .fashion {
   color: #f16d7f;
+}
+
+.menu-hover {
+  width: 232px;
+  height: 764px;
+  background: #ffffff;
+  -webkit-box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+          box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+  position: absolute;
+  z-index: 1;
+  right: -236px;
+}
+
+.menu-hover button {
+  border: none;
+  background: none;
+  cursor: pointer;
+  padding-top: 16px;
+  padding-left: 203px;
+}
+
+.menu-hover button img {
+  width: 12px;
+  height: 12px;
+}
+
+.menu-hover .menu {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 17px;
+  color: #000000;
+  padding-top: 8px;
+  padding-left: 37px;
+  display: block;
+  text-transform: uppercase;
+}
+
+.menu-hover-categories {
+  padding-left: 37px;
+}
+
+.menu-hover-categories span {
+  font-size: 14px;
+  line-height: 17px;
+  color: #f16d7f;
+  text-transform: uppercase;
+}
+
+.menu-hover-categories a {
+  text-decoration: none;
+  font-size: 14px;
+  line-height: 17px;
+  color: #6f6e6e;
+  padding-left: 17px;
+}
+
+.menu-hover .man {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100px;
+  height: 130px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-top: 24px;
+}
+
+.menu-hover .woman {
+  width: 126px;
+  height: 163px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-top: 20px;
+}
+
+.menu-hover .kids {
+  width: 126px;
+  height: 196px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-top: 20px;
 }
 
 /* ----CATEGORIES---- */
@@ -1271,6 +1399,16 @@ footer {
           filter: drop-shadow(17px 19px 24px rgba(0, 0, 0, 0.13));
 }
 
+.goods button {
+  border: none;
+  background: none;
+  padding-left: 57px;
+  padding-top: 28px;
+  width: 18px;
+  height: 18px;
+  cursor: pointer;
+}
+
 .goods-one {
   width: 652px;
   height: 306px;
@@ -1289,13 +1427,6 @@ footer {
   display: flex;
   background-color: white;
   margin-bottom: 72px;
-}
-
-.goods .delete {
-  width: 18px;
-  height: 18px;
-  padding-left: 57px;
-  padding-top: 28px;
 }
 
 .goods .cart-photo {
@@ -1372,6 +1503,14 @@ footer {
   font-size: 14px;
   line-height: 17px;
   color: #000000;
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
+  cursor: pointer;
+}
+
+.buttons button:hover {
+  -webkit-box-shadow: -1px -1px 14px 7px rgba(125, 125, 125, 0.44);
+          box-shadow: -1px -1px 14px 7px rgba(125, 125, 125, 0.44);
 }
 
 .form-info {
@@ -1443,12 +1582,12 @@ footer {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  width: 108px;
+  height: 13px;
   padding: 39px 34px 12px 218px;
 }
 
-.total-sub p {
-  width: 108px;
-  height: 13px;
+.total-sub-span {
   font-size: 11px;
   line-height: 13px;
   color: #4a4a4a;
@@ -1460,6 +1599,12 @@ footer {
   line-height: 19px;
   color: #222222;
   padding: 0px 37px 21px 153px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .total-grand span {
@@ -1487,6 +1632,15 @@ footer {
   text-transform: uppercase;
   margin: 17px 43px 42px 44px;
   border: none;
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
+  cursor: pointer;
+}
+
+.total button:hover {
+  background: #ffffff;
+  color: #f16d7f;
+  border: solid 1px #f16d7f;
 }
 
 @media (max-width: 768px) {
@@ -1502,8 +1656,14 @@ footer {
   .goods-one {
     width: 100%;
   }
+  .goods-one button {
+    padding-left: 137px;
+  }
   .goods-two {
     width: 100%;
+  }
+  .goods-two button {
+    padding-left: 137px;
   }
   .buttons {
     width: 508px;
@@ -1539,6 +1699,7 @@ footer {
   .goods-one {
     width: 358px;
     height: 188px;
+    margin-bottom: 32px;
   }
   .goods-one .cart-photo {
     width: 143px;
@@ -1547,10 +1708,111 @@ footer {
   .goods-one .description-one {
     width: 143px;
     height: 136px;
+    padding-left: 17px;
+    padding-top: 13px;
   }
   .goods-one .description-one .product-name {
     font-size: 16px;
     line-height: 19px;
+    padding-bottom: 25px;
+  }
+  .goods-one .description-one p {
+    font-size: 14px;
+    line-height: 17px;
+  }
+  .goods-one .description-one p:not(last-child) {
+    padding-bottom: 4px;
+  }
+  .goods-one .description-one .quantity {
+    font-size: 14px;
+    line-height: 17px;
+  }
+  .goods-one .description-one .quantity input {
+    width: 24px;
+    height: 15px;
+    font-size: 10px;
+    margin-left: 15px;
+    line-height: 17px;
+  }
+  .goods-one button {
+    padding-left: 31px;
+    padding-top: 17px;
+  }
+  .goods-one button img {
+    width: 9px;
+    height: 11px;
+  }
+  .goods-two {
+    width: 358px;
+    height: 188px;
+    margin-bottom: 30px;
+  }
+  .goods-two .cart-photo {
+    width: 143px;
+    height: 188px;
+  }
+  .goods-two .description-one {
+    width: 143px;
+    height: 136px;
+    padding-left: 17px;
+    padding-top: 13px;
+  }
+  .goods-two .description-one .product-name {
+    font-size: 16px;
+    line-height: 19px;
+    padding-bottom: 25px;
+  }
+  .goods-two .description-one p {
+    font-size: 14px;
+    line-height: 17px;
+  }
+  .goods-two .description-one p:not(last-child) {
+    padding-bottom: 4px;
+  }
+  .goods-two .description-one .quantity {
+    font-size: 14px;
+    line-height: 17px;
+  }
+  .goods-two .description-one .quantity input {
+    width: 24px;
+    height: 15px;
+    font-size: 10px;
+    margin-left: 15px;
+    line-height: 17px;
+  }
+  .goods-two button {
+    padding-left: 31px;
+    padding-top: 17px;
+  }
+  .goods-two button img {
+    width: 9px;
+    height: 11px;
+  }
+  .buttons {
+    width: 100%;
+    padding-bottom: 48px;
+    height: auto;
+  }
+  .buttons button {
+    width: 175px;
+    height: 33px;
+    text-transform: none;
+    font-size: 12px;
+    line-height: 14px;
+    color: #575757;
+  }
+  .form-info {
+    width: 100%;
+    height: auto;
+    margin-bottom: 96px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .form-info .address {
+    height: 272px;
+    margin-bottom: 48px;
   }
 }
 
