--- a/css/style.scss
+++ b/css/style.scss
@@ -3,10 +3,6 @@
   margin: 0;
 }
 
-/* img {
-  display: block;
-} */
-
 body {
   font-family: Lato;
   font-style: normal;
@@ -54,6 +50,22 @@ header {
   height: 23px;
   border: none;
   background-color: transparent;
+  cursor: pointer;
+
+  &:hover .menu-hover {
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
+    animation-name: menu;
+  }
+}
+
+@keyframes menu {
+  from {
+    right: -236px;
+  }
+  to {
+    right: 0px;
+  }
 }
 
 .menu_btn-item {
@@ -94,6 +106,7 @@ header {
   background-image: url(../img/men_brand.png);
   background-repeat: no-repeat;
   background-position: center left 170px;
+  position: relative;
 }
 
 .brand__title {
@@ -125,6 +138,86 @@ header {
 
 .fashion {
   color: #f16d7f;
+}
+
+.menu-hover {
+  width: 232px;
+  height: 764px;
+  background: #ffffff;
+  box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+  position: absolute;
+  z-index: 1;
+  right: -236px;
+
+  button {
+    border: none;
+    background: none;
+    cursor: pointer;
+    padding-top: 16px;
+    padding-left: 203px;
+
+    img {
+      width: 12px;
+      height: 12px;
+    }
+  }
+
+  .menu {
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 17px;
+    color: #000000;
+    padding-top: 8px;
+    padding-left: 37px;
+    display: block;
+    text-transform: uppercase;
+  }
+
+  &-categories {
+    padding-left: 37px;
+
+    span {
+      font-size: 14px;
+      line-height: 17px;
+      color: #f16d7f;
+      text-transform: uppercase;
+    }
+
+    a {
+      text-decoration: none;
+      font-size: 14px;
+      line-height: 17px;
+      color: #6f6e6e;
+      padding-left: 17px;
+    }
+  }
+
+  .man {
+    display: flex;
+    flex-direction: column;
+    width: 100px;
+    height: 130px;
+    justify-content: space-between;
+    padding-top: 24px;
+  }
+
+  .woman {
+    width: 126px;
+    height: 163px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-top: 20px;
+  }
+
+  .kids {
+    width: 126px;
+    height: 196px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-top: 20px;
+  }
 }
 
 /* ----CATEGORIES---- */
@@ -1155,6 +1248,16 @@ footer {
   padding-top: 96px;
   filter: drop-shadow(17px 19px 24px rgba(0, 0, 0, 0.13));
 
+  button {
+    border: none;
+    background: none;
+    padding-left: 57px;
+    padding-top: 28px;
+    width: 18px;
+    height: 18px;
+    cursor: pointer;
+  }
+
   &-one {
     width: 652px;
     height: 306px;
@@ -1169,13 +1272,6 @@ footer {
     display: flex;
     background-color: white;
     margin-bottom: 72px;
-  }
-
-  .delete {
-    width: 18px;
-    height: 18px;
-    padding-left: 57px;
-    padding-top: 28px;
   }
 
   .cart-photo {
@@ -1248,6 +1344,12 @@ footer {
     font-size: 14px;
     line-height: 17px;
     color: #000000;
+    transition-duration: 0.5s;
+    cursor: pointer;
+
+    &:hover {
+      box-shadow: -1px -1px 14px 7px rgba(125, 125, 125, 0.44);
+    }
   }
 }
 
@@ -1315,12 +1417,11 @@ footer {
   &-sub {
     display: flex;
     justify-content: space-between;
-
+    width: 108px;
+    height: 13px;
     padding: 39px 34px 12px 218px;
 
-    p {
-      width: 108px;
-      height: 13px;
+    &-span {
       font-size: 11px;
       line-height: 13px;
       color: #4a4a4a;
@@ -1333,6 +1434,8 @@ footer {
     line-height: 19px;
     color: #222222;
     padding: 0px 37px 21px 153px;
+    display: flex;
+    justify-content: space-between;
 
     span {
       font-weight: bold;
@@ -1360,6 +1463,14 @@ footer {
     text-transform: uppercase;
     margin: 17px 43px 42px 44px;
     border: none;
+    transition-duration: 0.5s;
+    cursor: pointer;
+
+    &:hover {
+      background: #ffffff;
+      color: #f16d7f;
+      border: solid 1px #f16d7f;
+    }
   }
 }
 
@@ -1374,10 +1485,18 @@ footer {
 
   .goods-one {
     width: 100%;
+
+    button {
+      padding-left: 137px;
+    }
   }
 
   .goods-two {
     width: 100%;
+
+    button {
+      padding-left: 137px;
+    }
   }
 
   .buttons {
@@ -1414,6 +1533,7 @@ footer {
   .goods-one {
     width: 358px;
     height: 188px;
+    margin-bottom: 32px;
 
     .cart-photo {
       width: 143px;
@@ -1423,11 +1543,129 @@ footer {
     .description-one {
       width: 143px;
       height: 136px;
+      padding-left: 17px;
+      padding-top: 13px;
 
       .product-name {
         font-size: 16px;
         line-height: 19px;
+        padding-bottom: 25px;
       }
+
+      p {
+        font-size: 14px;
+        line-height: 17px;
+      }
+
+      p:not(last-child) {
+        padding-bottom: 4px;
+      }
+
+      .quantity {
+        font-size: 14px;
+        line-height: 17px;
+
+        input {
+          width: 24px;
+          height: 15px;
+          font-size: 10px;
+          margin-left: 15px;
+          line-height: 17px;
+        }
+      }
+    }
+
+    button {
+      padding-left: 31px;
+      padding-top: 17px;
+
+      img {
+        width: 9px;
+        height: 11px;
+      }
+    }
+  }
+
+  .goods-two {
+    width: 358px;
+    height: 188px;
+    margin-bottom: 30px;
+
+    .cart-photo {
+      width: 143px;
+      height: 188px;
+    }
+
+    .description-one {
+      width: 143px;
+      height: 136px;
+      padding-left: 17px;
+      padding-top: 13px;
+
+      .product-name {
+        font-size: 16px;
+        line-height: 19px;
+        padding-bottom: 25px;
+      }
+
+      p {
+        font-size: 14px;
+        line-height: 17px;
+      }
+
+      p:not(last-child) {
+        padding-bottom: 4px;
+      }
+
+      .quantity {
+        font-size: 14px;
+        line-height: 17px;
+
+        input {
+          width: 24px;
+          height: 15px;
+          font-size: 10px;
+          margin-left: 15px;
+          line-height: 17px;
+        }
+      }
+    }
+
+    button {
+      padding-left: 31px;
+      padding-top: 17px;
+
+      img {
+        width: 9px;
+        height: 11px;
+      }
+    }
+  }
+
+  .buttons {
+    width: 100%;
+    padding-bottom: 48px;
+    height: auto;
+
+    button {
+      width: 175px;
+      height: 33px;
+      text-transform: none;
+      font-size: 12px;
+      line-height: 14px;
+      color: #575757;
+    }
+  }
+
+  .form-info {
+    width: 100%;
+    height: auto;
+    margin-bottom: 96px;
+    flex-direction: column;
+
+    .address {
+      height: 272px;
+      margin-bottom: 48px;
     }
   }
 }
